SE AGREGA LA VERSION 0.0.1

--- a/index.html
+++ b/index.html
@@ -21,10 +21,21 @@
         <a href="#"><i class="fas fa-user format-Icon navegation"></i></i></a>
       </nav>
     </header>
-  <section>
-
-  </section>
+  
   <main>
+    <section>
+      <nav>
+        <a class="click format-Nombre-tablero" href="#"><em>Nombre del Tablero</em></a>
+        <a href="#"><i class="far fa-star click"></i></a>
+        <span class="formt-border"></span>
+        <a class="click" href="#">Personal</a>
+        <span class="formt-border"></span>
+        <a class="click" href="#"><i class="fas fa-lock"></i>Privado</a>
+      </nav>
+    </section>
+    <section id="espacio-trabajo">
+    
+    </section>
       
   </main>
   <script src="js/app.js"></script>
